<resources>
    <string name="app_name">Timetable</string>
    <string name="title_activity_main_navigation">MainActivity</string>
    <string name="title_home">我的</string>
    <string name="title_dashboard">课程</string>
    <string name="title_notifications">事务</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginTvNum">学号：</string>
    <string name="loginTvPwd">密码：</string>
    <string name="hintNum">请输入学号</string>
    <string name="hintPwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="avator">avator</string>
    <string name="homeNum">学号：</string>
    <string name="homeName">姓名：</string>
    <string name="homeGrade">年级：</string>
    <string name="homeClass">班级：</string>
    <string name="homeUpdatePwd">修改密码</string>
    <string name="homeLogout">退出登录</string>
    <string name="homeavatar">homeAvatar</string>
    <string name="notFinished">待完成</string>
    <string name="notRemind">已忽略</string>
    <string name="addNotice">添加事件提醒</string>
    <string name="clickHint">截止日期</string>
    <string name="noticeName">事件名：</string>
    <string name="noticeDetail">详情：</string>
    <string name="submit">提交</string>
    <string name="icon">icon</string>

</resources>