<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment"
    android:focusable="true"
    android:background="@drawable/bg2">

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/homeavatar"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/avatar"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/homeTvName"
        android:layout_width="226dp"
        android:layout_height="35dp"
        android:text="@string/homeName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/homeTvGrade"
        app:layout_constraintEnd_toEndOf="@+id/homeTvGrade"
        app:layout_constraintStart_toStartOf="@+id/homeTvGrade"
        app:layout_constraintTop_toBottomOf="@+id/homeTvNum" />

    <TextView
        android:id="@+id/homeTvClass"
        android:layout_width="226dp"
        android:layout_height="35dp"
        android:layout_marginBottom="40dp"
        android:text="@string/homeClass"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homeTvNum"
        android:layout_width="226dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/homeNum"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTvName"
        app:layout_constraintStart_toStartOf="@+id/homeTvName"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/homeTvGrade"
        android:layout_width="226dp"
        android:layout_height="35dp"
        android:text="@string/homeGrade"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/homeTvClass"
        app:layout_constraintEnd_toEndOf="@+id/homeTvClass"
        app:layout_constraintStart_toStartOf="@+id/homeTvClass"
        app:layout_constraintTop_toBottomOf="@+id/homeTvName" />

    <Button
        android:id="@+id/homeBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeUpdatePwd"
        android:textSize="18sp"
        android:background="@drawable/button_curr_course"
        android:textColor="@color/app_white"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/homeBtnLogout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/homeBtnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeLogout"
        android:textSize="18sp"
        android:background="@drawable/button"
        android:textColor="@color/app_white"
        app:layout_constraintBottom_toBottomOf="@+id/homeBtnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeBtnUpdate"
        app:layout_constraintTop_toTopOf="@+id/homeBtnUpdate" />
</androidx.constraintlayout.widget.ConstraintLayout>